# hashes-fv

./: .gitignore  .mcp.json  flake.nix
.github/workflows/: sha2.yml
sha2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
sha2/proofs/fstar/: Help.SHA256.fst
sha2/proofs/lean/: AxiomCheck.lean  Common.lean  Compress.lean  Extraction.lean  FinalBlock.lean  Loop0.lean  Loop1.lean  RoundStep.lean  SetChain.lean  Sha224.lean  Sha256.lean  Sha2Inner.lean  Sha2InnerSpec.lean  Sha384.lean  Sha512.lean  Sha512_224.lean  Sha512_256.lean  Spec.lean  ToU32s.lean  ToU64s.lean  U32.lean  Word.lean  lake-manifest.json  lakefile.lean
sha2/proofs/lean/Common/: Digest.lean  Truncate.lean  U64.lean  U8.lean  Vec.lean  Wp.lean
sha2/proofs/lean/Sha256/: Compress.lean  FinalBlock.lean  ImplSpec.lean  Inner.lean  InnerSpec.lean  Loop0.lean  Loop1.lean  RoundStep.lean  SetChain.lean  Sha224.lean  Sha256.lean
sha2/proofs/lean/Sha512/: Compress.lean  FinalBlock.lean  ImplSpec.lean  Inner.lean  InnerSpec.lean  Loop0.lean  Loop1.lean  RoundStep.lean  SetChain.lean  Sha384.lean  Sha512.lean  Sha512_224.lean  Sha512_256.lean
sha2/proofs/lean/Word/: ToU32s.lean  ToU64s.lean  U32.lean  U64.lean
sha2/src/: consts.rs  lib.rs  sha256.rs  sha512.rs
sha2/src/sha256/soft/: compact.rs
sha2/tests/: mod.rs
