[package]
name = "sha2"
version = "0.11.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha2"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = """
Pure Rust implementation of the SHA-2 hash function family
including SHA-224, SHA-256, SHA-384, and SHA-512.
"""

[dependencies]
cfg-if = "1"

[dev-dependencies]
hex-literal = "1"

[features]
default = ["sha256", "sha512"]
sha256 = []
sha256_224 = []
sha512 = []
sha512_224 = []
sha512_256 = []
sha512_384 = []

[package.metadata.docs.rs]
all-features = true
