[package]
name = "sha2-fv"
version = "0.11.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha2-fv"
readme = "README.md"
repository = "https://github.com/remix7531/hashes-fv"
license = "MIT OR Apache-2.0"
keywords = ["sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = """
Pure Rust implementation of the SHA-2 hash function family
including SHA-224, SHA-256, SHA-384, and SHA-512.
"""

[lib]
# Keep the Rust crate name `sha2` so downstream `use sha2::sha256;` and the
# Aeneas `--start-from sha2::sha256` extraction path stay unchanged. Only the
# Cargo package name (sha2-fv) differs, to avoid clashing on crates.io.
name = "sha2"

[dependencies]
cfg-if = "1"

[target.'cfg(hax)'.dependencies]
hax-lib = { git = "https://github.com/cryspen/hax", tag = "hax-lib-v0.3.5" }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["sha256", "sha512"]
compress = []
sha256 = []
sha256_224 = []
sha512 = []
sha512_224 = []
sha512_256 = []
sha512_384 = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(hax)',
]

[package.metadata.docs.rs]
all-features = true
