[package]
name = "sha2-fv"
version = "0.11.0"
authors = ["RustCrypto Developers", "remix7531 <remix7531@mailbox.org>"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha2-fv"
readme = "README.md"
repository = "https://github.com/remix7531/hashes-fv"
license = "MIT OR Apache-2.0"
keywords = ["sha2", "hash", "digest", "crypto", "formal-verification"]
categories = ["cryptography", "no-std"]
description = """
Formally verified Pure Rust implementation of the SHA-2 hash function
family (SHA-224, SHA-256, SHA-384, SHA-512, SHA-512/224, SHA-512/256),
with Lean 4 proofs of correctness against FIPS 180-4.
"""

[lib]
# Library name is `sha2` to match the verified extraction target; the
# Cargo package name `sha2-fv` is distinct to avoid crates.io clashes.
name = "sha2"

[dev-dependencies]
blobby = { version = "0.4", features = ["alloc"] }
hex-literal = "1"

[features]
default = ["sha256", "sha256_224", "sha512", "sha512_224", "sha512_256", "sha512_384"]
compress = []
sha256 = []
sha256_224 = []
sha512 = []
sha512_224 = []
sha512_256 = []
sha512_384 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
